<resources>
    <string name="app_name">PhotoAlbumProject</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="placeholder_image">PlaceHolderImage</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_description">Button used for adding a new picture</string>
    <string name="update_title">Update Title</string>
    <string name="update_description">Update Description</string>

</resources>