<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ImageUploader">

    <ImageView
        android:id="@+id/clickToUpdate"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/placeholder_image"
        app:layout_constraintEnd_toStartOf="@+id/update_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/update_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:height="50dp"
        android:autofillHints="Title"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateDescription"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginTop="20dp"
        android:autofillHints="Description"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttons2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelUpdate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#009688"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saveUpdate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#009688"
            android:text="@string/save"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</LinearLayout>